Fix info map place name, text align to left

--- a/app/assets/stylesheets/components/_mobile_index.scss
+++ b/app/assets/stylesheets/components/_mobile_index.scss
@@ -88,6 +88,12 @@
   .map-image {
     height: 22vh;
   }
+
+  .map-name {
+    width: min-content;
+    text-align: left;
+    margin: 0px auto;
+  }
 }
 
 // max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;
